--- a/login.html
+++ b/login.html
@@ -21,6 +21,6 @@
             <button type="button" onclick="window.location.href='create.html'">Register</button>
         </div>
     </div>
-    <script src="login.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
