--- a/create.html
+++ b/create.html
@@ -19,6 +19,6 @@
             <button type="submit">Register</button>
         </form>
     </div>
-    <script src="create.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
