--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         By IT A2 © Made in 2024. All rights reserved.
     </footer>
     
-    <script src="home.js"></script>
+    <script src="main.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             var isLoggedIn = localStorage.getItem('isLoggedIn') === 'true';
