--- a/Shooping Cart.html
+++ b/Shooping Cart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Training Center</title>
     <link rel="stylesheet" href="styles.css"> <!--  -->
-    <script src="shopping.js" defer></script>
+    <script src="main.js" defer></script>
     <style>
         /*  */
         /* ...... */
@@ -149,7 +149,7 @@
         By IT A2 © Made in 2024. All rights reserved.
     </footer>
 
-    <script src="home.js"></script> <!--  -->
+    <script src="main.js"></script> <!--  -->
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             var isLoggedIn = localStorage.getItem('isLoggedIn') === 'true';
