--- a/Project.html
+++ b/Project.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Training Center</title>
-    <link rel="stylesheet" href="styles.css"> <!-- 引入外部CSS -->
+    <link rel="stylesheet" href="styles.css"> <!-- CSS -->
     <style>
         .logout-btn {
             display: none;
