--- a/Project.html
+++ b/Project.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Niu Be IT</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css"> <!-- 引入外部CSS -->
+    <link rel="stylesheet" href="styles.css"> <!-- CSS -->
     <style>
         .logout-btn {
             display: none;
